@@ -15,7 +15,7 @@
 #      along with this program; if not, write to the Free Software
 #      Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111, USA.
 #   
-# $Id: requestHandler.py,v 1.5 2002/06/18 20:09:59 drew_csillag Exp $
+# $Id: requestHandler.py,v 1.6 2002/06/19 13:37:43 smulloni Exp $
 # Time-stamp: <01/05/09 17:48:12 smulloni>
 ########################################################################
 
@@ -32,6 +32,7 @@ import signal
 import socket
 import types
 import SocketScience
+from SkunkExcept import SkunkCriticalError
 
 BeginSession=KeyedHook()
 InitRequest=KeyedHook()
@@ -235,6 +236,9 @@ def addRequestHandler(protocol, ports):
 
 ########################################################################
 # $Log: requestHandler.py,v $
+# Revision 1.6  2002/06/19 13:37:43  smulloni
+# some pychecker-inspired fixes.
+#
 # Revision 1.5  2002/06/18 20:09:59  drew_csillag
 # SkunkExcept
 # 	wasn't imported so could cause problems in certain cases, fixed.
